<resources>
    <string name="app_name">RxAndroidWithRetrofit</string>
    <string name="username">Username</string>
    <string name="git_username">Github username</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="company">Company</string>
    <string name="need_username">Enter your profileEntity username</string>
    <string name="repos">Repositories</string>
    <string name="gists">Gists</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
</resources>
