<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profile"
            type="com.ananth.rxandroidwithretrofit.data.local.entity.ProfileEntity" />

        <variable
            name="handler"
            type="com.ananth.rxandroidwithretrofit.view.profile.ProfileClickHandler" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ananth.rxandroidwithretrofit.view.profile.ProfileActivity">

        <FrameLayout
            android:id="@+id/top_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="2dp"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"></android.support.v7.widget.Toolbar>

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile"
                android:textColor="#fff"
                android:textSize="20sp" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/progress_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top_lay"
            android:background="#fff"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <com.rey.material.widget.ProgressView
                android:id="@+id/progress"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:cpd_strokeColor="@color/colorAccent"
                app:cpd_strokeSize="1dp"
                app:pv_autostart="true"
                app:pv_circular="true"
                app:pv_progressMode="indeterminate"
                app:pv_progressStyle="@style/CircularProgressmain" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_result_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top_lay"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/noresult"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="No Result Found"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                android:visibility="visible" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/content_lay"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_below="@+id/top_lay"
            android:visibility="visible">

            <ImageView
                android:id="@+id/user_bg"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:blurImageView="@{profile.avatarUrl}"
                android:scaleType="fitXY" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@color/transparent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="top|center"
                android:orientation="vertical">

                <com.ananth.rxandroidwithretrofit.view.CircularView
                    android:id="@+id/user_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:clickable="false"
                    app:ImageUrl="@{profile.avatarUrl}"
                    android:src="@drawable/noimage" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@{profile.name}"
                    tools:text="@string/username" />

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{profile.company}"
                    tools:text="@string/company"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/user_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:text="@{profile.location}"
                    tools:text="@string/location" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#fff" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <LinearLayout
                        android:id="@+id/repos"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:onClick="@{()->handler.onRepoClick(profile.name)}"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/repos"
                            android:textColor="#fff"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/repos_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:maxLength="5"
                            android:singleLine="true"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:text="@{Integer.toString(safeUnbox(profile.publicRepos))}"
                            tools:text="40" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="80dp"
                        android:background="#fff" />

                    <LinearLayout
                        android:id="@+id/gist_lay"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:onClick="@{()->handler.onGistClick(profile.name)}"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/gists"
                            android:textColor="#fff"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/gist_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:maxLength="5"
                            android:singleLine="true"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:text="@{Integer.toString(safeUnbox(profile.publicGists))}"
                            tools:text="40" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="80dp"
                        android:background="#fff" />

                    <LinearLayout
                        android:id="@+id/followers"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:onClick="@{()->handler.onFollowerClick(profile.name)}"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/followers"
                            android:textColor="#fff"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/followers_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:maxLength="5"
                            android:singleLine="true"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:text="@{Integer.toString(safeUnbox(profile.followers))}"
                            tools:text="40" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="80dp"
                        android:background="#fff" />

                    <LinearLayout
                        android:id="@+id/followings"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:onClick="@{()->handler.onFollowingClick(profile.name)}"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/followings"
                            android:textColor="#fff"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/followings_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:maxLength="5"
                            android:singleLine="true"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:text="@{Integer.toString(safeUnbox(profile.following))}"
                            tools:text="40" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/happy_coding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_lay"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="Happy Coding :)"
            android:textColor="#000"
            android:textSize="18sp"
            android:visibility="gone" />
    </RelativeLayout>
</layout>